force-app/main/default/objects/Pipedrive_User__c/Pipedrive_User__c.object-meta.xml
<CustomObject>
    <label>Pipedrive User</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipedrive Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>