force-app/main/default/objects/Pipedrive_User__c/fields/activated__c.field-meta.xml
<CustomField>
    <fullName>activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>activated</label>
    <type>Checkbox</type>
</CustomField>