force-app/main/default/objects/Pipedrive_User__c/fields/default_currency__c.field-meta.xml
<CustomField>
    <fullName>default_currency__c</fullName>
    <label>default currency</label>
    <length>4</length>
    <type>Text</type>
</CustomField>