force-app/main/default/objects/Pipedrive_User__c/fields/last_login__c.field-meta.xml
<CustomField>
    <fullName>last_login__c</fullName>
    <label>last_login</label>
    <length>100</length>
    <type>Text</type>
</CustomField>