force-app/main/default/objects/Pipedrive_User__c/fields/locale__c.field-meta.xml
<CustomField>
    <fullName>locale__c</fullName>
    <label>locale</label>
    <length>40</length>
    <type>Text</type>
</CustomField>