force-app/main/default/objects/Pipedrive_User__c/fields/timezone_name__c.field-meta.xml
<CustomField>
    <fullName>timezone_name__c</fullName>
    <label>timezone name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>