force-app/main/default/objects/Pipedrive_User__c/fields/timezone_offset__c.field-meta.xml
<CustomField>
    <fullName>timezone_offset__c</fullName>
    <label>timezone offset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>