force-app/main/default/objects/Pipedrive_User__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>activated__c</columns>
    <columns>default_currency__c</columns>
    <columns>email__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_Admin__c</columns>
    <columns>last_login__c</columns>
    <columns>locale__c</columns>
    <columns>phone__c</columns>
    <columns>Pipedrive_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>